--- a/new.html
+++ b/new.html
@@ -3,7 +3,8 @@
 <body>
 
 <h1>hello world</h1>
-<h2>this is a sample page<h2>
+<h2>I am Catherene.<h2>
+<h3>Hope you are all doing well</h3>
 
 </body>
 </html>
