--- a/new.html
+++ b/new.html
@@ -3,8 +3,10 @@
 <body>
 
 <h1>hello world</h1>
-<h2>I am Catherene.<h2>
-<h3>Hope you are all doing well</h3>
+<h2>this is just a sample page<h2>
+</p>it will be updated soon</p>
+</p>thank you</p>
+
 
 </body>
 </html>
